--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -96,3 +96,6 @@ jobs:
         with:
           name: xivlauncher-artifact
           path: src\bin\
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v2.1.0
+
