--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -33,9 +33,9 @@ jobs:
         id: build-squirrel
         run: |
           cd src\
-          $releases = Invoke-WebRequest -Uri 'https://api.github.com/repos/goatcorp/FFXIVQuickLauncher/releases'
+          $releases = Invoke-WebRequest -Uri 'https://api.github.com/repos/lambroisie/FFXIVQuickLauncher/releases'
           $current = ConvertFrom-Json -InputObject $releases.Content | Select-Object -First 1
-          $refver = '6.1.21'
+          $refver = $env:GITHUB_REF -replace '.*/'
           echo "::set-output name=version::$refver"
           nuget pack .\XIVLauncher.nuspec -properties version=$refver
           mkdir Releases
